<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ultra_violet"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="167dp"
        android:text="@string/rate_question"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />


    <EditText
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="218dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:hint="@string/enter_rating"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="30sp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:text="@string/finish" />


</RelativeLayout>