<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ultra_violet"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="167dp"
        android:text="@string/question"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/instruction_size"
        />


    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top_edit_text"
        android:layout_marginLeft="@dimen/indent_size"
        android:layout_marginRight="@dimen/indent_size"
        android:background="@color/dark_violet"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/enter_text_size"
        android:hint="@string/enter_note"
        android:inputType="text" />


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:text="@string/next" />


</RelativeLayout>